2022-11-17T08:08:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3486453087 # 1039
* notice: last 14d: unq all: 8 23
* notice: prev accum: outdated-unq outdated-all / unq all: 620 1924 / 631 1946
* notice: next accum: outdated-unq outdated-all / unq all: 620 1924 / 632 1947
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-17]

2022-11-17T00:32:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3484298702 # 1038
* notice: last 14d: unq all: 8 22
* notice: prev accum: outdated-unq outdated-all / unq all: 620 1924 / 629 1943
* notice: next accum: outdated-unq outdated-all / unq all: 620 1924 / 631 1946
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [] / [2022-11-16]

2022-11-16T16:07:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3481032471 # 1037
* notice: last 14d: unq all: 6 19
* notice: prev accum: outdated-unq outdated-all / unq all: 620 1924 / 629 1942
* notice: next accum: outdated-unq outdated-all / unq all: 620 1924 / 629 1943
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-16]

2022-11-16T08:08:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3477506701 # 1036
* notice: last 14d: unq all: 6 18
* notice: prev accum: outdated-unq outdated-all / unq all: 619 1923 / 628 1941
* notice: next accum: outdated-unq outdated-all / unq all: 620 1924 / 629 1942
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-11-02] / [2022-11-16]

2022-11-16T00:33:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3475329299 # 1035
* notice: last 14d: unq all: 6 18