@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-17T08:08:23Z",
+  "timestamp" : "2022-11-17T16:07:30Z",
   "count_outdated" : 1924,
   "uniques_outdated" : 620,
-  "count" : 1947,
+  "count" : 1948,
   "uniques" : 632,
   "clones" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-11-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
