@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 8,
   "clones": [
     {
@@ -34,7 +34,7 @@
     },
     {
       "timestamp": "2022-11-17T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
