@@ -1,3 +1,11 @@
+2022-11-17T16:07:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3489947211 # 1040
+* notice: last 14d: unq all: 8 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 620 1924 / 632 1947
+* notice: next accum: outdated-unq outdated-all / unq all: 620 1924 / 632 1948
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-17]
+
 2022-11-17T08:08:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3486453087 # 1039
 * notice: last 14d: unq all: 8 23
